<resources>
    <string name="app_name">Darts App</string>
    <string name="numberofplayers">numberOfPlayers</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="gamemode">gamemode</string>
    <string name="_501">501</string>
    <string name="_301">301</string>
    <string name="submit">submit</string>
    <string name="player1">player1</string>
    <string name="name">Name</string>
    <string name="_2">2</string>
    <string name="player2">player2</string>
    <string name="player3">player3</string>
    <string name="player4">player4</string>
    <string name="submit_succeed">submit succeed</string>
    <string name="_0">0</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_user">Welcome @user</string>
    <string name="sign_out">Sign out</string>
    <string name="new_game">New Game</string>
    <string name="account">Account</string>
    <string name="profile_picture_of_the_user">Profile Picture of the user</string>
    <string name="id">ID</string>
    <string name="username">Username</string>
    <string name="button">Button</string>
    <string name="full_name">Full Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="register_account">Register Account</string>
    <string name="textview">TextView</string>
    <string name="nameplayer1">namePlayer1</string>
    <string name="nameplayer2">namePlayer2</string>
    <string name="nameplayer3">namePlayer3</string>
    <string name="nameplayer4">namePlayer4</string>
    <string name="scorePlayer1">scorePlayer1</string>
    <string name="scorePlayer2">scorePLayer2</string>
    <string name="scorePlayer3">scorePlayer3</string>
    <string name="scorePlayer4">scorePlayer4</string>
    <string name="worp_1">worp 1</string>
    <string name="worp_3">worp 3</string>
    <string name="worp_2">worp 2</string>
    <string name="worp_voltooid">worp voltooid</string>
    <string name="end_of_the_game">end of the game</string>
    <string name="results">results</string>
    <string name="throws_player_1">throws player 1</string>
    <string name="throws_player_2">throws player 2</string>
    <string name="throws_player_3">throws player 3</string>
    <string name="throws_player_4">throws player 4</string>
    <string name="highest_score_1_throw_player3">highest score 1 throw player3</string>
    <string name="highest_score_1_throw_player2">highest score 1 throw player2</string>
    <string name="highest_score_1_throw_player1">highest score 1 throw player1</string>
    <string name="best_throw">best throw</string>
    <string name="highest_score_1_throw_player4">highest score 1 throw player4</string>
    <string name="firstplayername">firstplayername</string>
    <string name="secondplayername">secondPlayerName</string>
    <string name="thirdplayername">thirdPlayerName</string>
    <string name="fourthplayername">fourthPlayerName</string>
    <string name="ranking">ranking</string>
    <string name="numberThrows">Throws:</string>
    <string name="start_new_game">Start new game</string>
    <string name="go_to_profile">Go to profile</string>
    <string name="menu">menu</string>
    <string name="databaseinfo">dataBaseInfo</string>

    <string-array name="zero_twenty">
        <item> 0</item>
        <item> 301 </item>
        <item> 1</item>
        <item> 2</item>
        <item> 3</item>
        <item> 4</item>
        <item> 5</item>
        <item> 6</item>
        <item> 7</item>
        <item> 8</item>
        <item> 9</item>
        <item> 10</item>
        <item> 11</item>
        <item> 12</item>
        <item> 13</item>
        <item> 14</item>
        <item> 15</item>
        <item> 16</item>
        <item> 17</item>
        <item> 18</item>
        <item> 19</item>
        <item> 20</item>
        <item> 25</item>
        <item> 50</item>
    </string-array>

    <string-array name="multiply_factor">
    <item> x1</item>
    <item> x2</item>
    <item> x3</item>
    </string-array>

</resources>